<resources>
    <string name="app_name">老年人行为监控软件</string>
    <string name="title_home">我的</string>
    <string name="title_dashboard">历史数据</string>
    <string name="title_notifications">当前数据</string>
    <string name="title_message">消息</string>
    <string name="title_login_or_register">登录/注册</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="text_username">用户名</string>
    <string name="text_password">密码</string>
    <string name="title_return">返回</string>
    <string name="text_username_edit">username</string>
    <string name="text_password_edit">username</string>
    <string name="text_startdate">起始日期</string>
    <string name="text_enddate">结束日期</string>
    <string name="text_date">日期</string>
    <string name="text_starttime">起始时间</string>
    <string name="text_endtime">结束时间</string>
    <string name="title_select">选择</string>
    <string name="title_confirm">确定</string>
    <string name="title_please_select">请选择</string>
    <string name="text_sensor_1">传感器1</string>
    <string name="text_sensor_2">传感器2</string>
    <string name="text_sensor_3">传感器3</string>
    <string name="text_sensor_data">传感器数据</string>
    <string name="text_x_axis">x轴加速度</string>
    <string name="text_y_axis">y轴加速度</string>
    <string name="text_z_axis">z轴加速度</string>
    <string name="text_current_behavior">行为识别结果</string>
    <string name="text_nothing">无</string>
    <string name="image_user_head">用户头像</string>
    <string name="button_user_bind">用户绑定</string>
    <string name="button_sensor_bind">传感器绑定</string>
    <string name="button_model_practice">识别模型训练</string>
    <string name="button_paras_practice">去噪参数训练</string>
    <string name="text_health_evaluate">行为健康评价：</string>
    <string name="text_user_type">用户类型：</string>
    <string name="text_message">消息</string>
    <string name="text_user_bind">输入待绑定用户名</string>
    <string name="text_bind">绑定</string>
    <string name="text_select_sensor_bind">选择要绑定的传感器</string>
    <string name="text_recognition_model_train_desc">请做出以下动作，结束后点击确定键</string>
    <string name="text_noise_model_train_desc">点击开始训练模型参数，点击结束停止</string>
    <string name="title_start">开始</string>
    <string name="title_end">结束</string>
</resources>