<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/userhead"
        android:layout_width="122dp"
        android:layout_height="132dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="137dp"
        android:contentDescription="@string/image_user_head"
        android:src="@drawable/head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="150dp"
        android:text="@string/title_login_or_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/some_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_user_bind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_user_bind" />

        <Button
            android:id="@+id/button_sensor_bind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sensor_bind" />

        <Button
            android:id="@+id/button_model_practice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_model_practice" />

        <Button
            android:id="@+id/button_paras_practice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_paras_practice" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>