<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorBind">

    <Button
        android:id="@+id/button_activity_sensor_bind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="396dp"
        android:onClick="onBindButtonClick"
        android:text="@string/text_bind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sensor_bind_spinner"
        android:layout_width="294dp"
        android:layout_height="33dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_select_senor_bind" />

    <TextView
        android:id="@+id/textView_select_senor_bind"
        android:layout_width="150dp"
        android:layout_height="28dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="152dp"
        android:text="@string/text_select_sensor_bind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_sensor_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:onClick="onReturnButtonClick"
        android:text="@string/title_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>